# box3d

./: CMakeLists.txt  CONTRIBUTING.md  README.md  build_vs2022.bat  render3d_imgui.ini  trees25.csv
.github/workflows/: build.yml
benchmark/: main.c
benchmark/amd7950x_scalar/: convex_pile.csv  joint_grid.csv  junkyard.csv  large_pyramid.csv  large_world.csv  many_pyramids.csv  rain.csv  trees100.csv  trees25.csv  trees50.csv  washer.csv
benchmark/amd7950x_sse2/: convex_pile.csv  joint_grid.csv  junkyard.csv  large_pyramid.csv  large_world.csv  many_pyramids.csv  rain.csv  trees100.csv  trees25.csv  trees50.csv  washer.csv
data/dumps/single_box/: box3d_dump.inl
docs/: CMakeLists.txt  character.md  collision.md  hello.md  large_worlds.md  overview.md  simulation.md
include/box3d/: base.h  box3d.h  collision.h  constants.h  id.h  math_functions.h  types.h
samples/: CMakeLists.txt  PORT_PLAN.md  camera.cpp  draw_bridge.cpp  draw_bridge.h  main.cpp  mesh_loader.h  renderer.cpp  renderer.h  sample.cpp  sample.h  sample_benchmark.cpp  sample_bodies.cpp  sample_character.cpp  sample_collision.cpp  sample_compound.cpp  sample_continuous.cpp  sample_determinism.cpp  sample_draw.cpp  sample_draw.h  sample_events.cpp  sample_geometry.cpp  sample_issues.cpp  sample_joint.cpp  sample_large_world.cpp  sample_manifold.cpp  sample_mesh.cpp  sample_ragdoll.cpp  sample_replay.cpp  sample_robustness.cpp  sample_shapes.cpp  sample_stacking.cpp  sample_tree.cpp  sample_wheel_stack.cpp  sample_world.cpp  scene.cpp
samples/gfx/: CMakeLists.txt  debug_adapter.c  debug_adapter.h  debug_shapes.c  debug_shapes.h  draw.c  draw.h  edges.c  edges.h  geometry_registry.c  geometry_registry.h  gtao.c  gtao.h  highlight_mask.c  ibl.c  keycodes.h  picking.h  renderer.c  renderer.h  shadow.c  shadow.h  utility.h
samples/host/: camera.cpp  camera.h  gui.cpp  gui.h
samples/shaders/: CLAUDE.md  CMakeLists.txt
samples/shaders/common/: pbr.glsl  preetham.glsl  shadow_pcf.glsl
samples/shaders/overlays/: line.glsl
samples/shaders/shapes/: capsule.glsl  cube.glsl  edge.glsl  geom.glsl  sphere.glsl
scripts/: find_missing_api.sh
shared/: benchmarks.c  benchmarks.h  determinism.c  human.c  metal_wheel1_hulls.h  overflow_color.c  stability.c  utils.c
src/: CMakeLists.txt  algorithm.h  arena_allocator.h  block_allocator.h  body.c  body.h  box3d.natvis  broad_phase.c  broad_phase.h  capsule.c  compound.c  constraint_graph.c  constraint_graph.h  contact.c  contact.h  contact_solver.c  container.h  convex_manifold.c  core.c  core.h  ctz.h  distance.c  distance_joint.c  dynamic_tree.c  height_field.c  hull.c  joint.c  manifold.h  math_functions.c  math_internal.h  mesh.c  mesh_contact.c  motor_joint.c  name_cache.c  name_cache.h  name_map.c  name_map.h  physics_world.c  physics_world.h  prismatic_joint.c  (+20 more)
test/: CMakeLists.txt  main.c  test_body.c  test_body_query.c  test_compound.c  test_compound_contact.c  test_determinism.c  test_distance.c  test_height_field.c  test_hull.c  test_large_world.c  test_manifold.c  test_math.c  test_mover.c  test_name_cache.c  test_recording.c  test_sat.c  test_shape.c  test_table.c  test_world.c
